--- a/ros2_foxy_tutorial_ws/src/my_robot_interfaces/CMakeLists.txt
+++ b/ros2_foxy_tutorial_ws/src/my_robot_interfaces/CMakeLists.txt
@@ -25,6 +25,9 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME} 
   "msg/HardwareStatus.msg"
+  "srv/ComputeRectangleArea.srv"
+  "srv/SetLED.srv"
+  "msg/StateLED.msg"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
