--- a/ros2_foxy_tutorial_ws/src/my_cpp_pkg_/CMakeLists.txt
+++ b/ros2_foxy_tutorial_ws/src/my_cpp_pkg_/CMakeLists.txt
@@ -56,6 +56,9 @@ ament_target_dependencies(add_two_ints_client rclcpp example_interfaces)
 add_executable(hw_status_publisher src/hw_status_publisher.cpp)
 ament_target_dependencies(hw_status_publisher rclcpp my_robot_interfaces)
 
+add_executable(number_publisher src/number_publisher.cpp)
+ament_target_dependencies(number_publisher rclcpp example_interfaces)
+
 install(TARGETS
   cpp_node
   phone
@@ -65,6 +68,7 @@ install(TARGETS
   add_two_ints_client_no_oop
   add_two_ints_client
   hw_status_publisher
+  number_publisher
   DESTINATION lib/${PROJECT_NAME}
 )
 
