--- a/ros2_foxy_tutorial_ws/src/my_robot_interfaces/CMakeLists.txt
+++ b/ros2_foxy_tutorial_ws/src/my_robot_interfaces/CMakeLists.txt
@@ -28,6 +28,9 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/ComputeRectangleArea.srv"
   "srv/SetLED.srv"
   "msg/StateLED.msg"
+  "msg/Turtle.msg"
+  "msg/TurtleArray.msg"
+  "srv/CatchTurtle.srv"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
